--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <div class="top-container">
     <img class="top-cloud" src="images/cloud.png" alt="">
     <h1>I'm Justin</h1>
-    <img class="profile-pic" src="C:\Users\justi\OneDrive\Documents\Web Development\CSS - My Site Images\monkey-naughty-monkey.png" alt="">
+    <img class="profile-pic" src="images/monkey-naughty-monkey.png" alt="">
     <h2>A <span class="pro">pro</span>grammer</h2>
     <img class="bottom-cloud" src="images/cloud.png" alt="">
     <img class="mountain" src="images/mountain.png" alt="">
@@ -29,13 +29,13 @@
     <div class="skills">
       <h2>My Skills.</h2>
       <div class="skill-row">
-        <img class="strategy-icon" src="C:\Users\justi\OneDrive\Documents\Web Development\CSS - My Site\images\strategy.png" alt="">
+        <img class="strategy-icon" src="images/strategy.png" alt="">
         <h3>Lorem & Ipsum</h3>
         <p class="skill-text">Lorem ipsum dolor sit amet, quis in duis, iaculis id felis. Consectetuer vestibulum, nunc urna lectus, erat ligula. Hendrerit nam, lectus ante, ut lorem eros.</p>
       </div>
       <hr class="dots">
       <div class="skill-row">
-        <img class="strategy-icon" src="C:\Users\justi\OneDrive\Documents\Web Development\CSS - My Site\images\statistics.png" alt="">
+        <img class="strategy-icon" src="images/statistics.png" alt="">
         <h3>Lorem Ipsum Dolor</h3>
         <p class = "skill-text">Lorem ipsum dolor sit amet, mauris sed consectetuer. Etiam et eu, bibendum interdum, lacus quis mauris. Curabitur wisi, quisque vel eu, rutrum nam.</p>
       </div>
